[gd_scene load_steps=9 format=3 uid="uid://btntrhr115wlk"]

[ext_resource type="Script" path="res://main.gd" id="1_vnfpc"]
[ext_resource type="PackedScene" uid="uid://drl6odfor0i1x" path="res://Enemy.tscn" id="2_lw7b8"]
[ext_resource type="Script" path="res://Player.gd" id="3_7jll3"]
[ext_resource type="Texture2D" uid="uid://jihk3ymovalo" path="res://assets/player/l0_player1.png" id="4_m35xc"]
[ext_resource type="Texture2D" uid="uid://d1hmx6mnko6rf" path="res://assets/player/l1_player1.png" id="5_do725"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qo0f8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_m35xc")
}, {
"duration": 1.0,
"texture": ExtResource("5_do725")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xv0la"]
radius = 20.0
height = 50.0

[sub_resource type="Curve2D" id="Curve2D_7yc6v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 9

[node name="Main" type="Node2D"]
script = ExtResource("1_vnfpc")
mob_scene = ExtResource("2_lw7b8")

[node name="Player" type="Area2D" parent="."]
position = Vector2(512, 264)
script = ExtResource("3_7jll3")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_qo0f8")
animation = &"walk"
frame_progress = 0.0870927

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2, -2)
shape = SubResource("CapsuleShape2D_xv0la")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(570, 311)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7yc6v")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-0.206543, 0)

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
